--- a/jxcore-service/src/main/AndroidManifest.xml
+++ b/jxcore-service/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <application android:allowBackup="true" android:label="@string/app_name">
+    <application android:label="@string/app_name">
 
     </application>
 
